Added customer database connection and created customerAdd form

--- a/stock-tracking-automation.csproj
+++ b/stock-tracking-automation.csproj
@@ -60,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmMüsteriEkle.resx">
+      <DependentUpon>frmMüsteriEkle.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmSales.resx">
       <DependentUpon>frmSales.cs</DependentUpon>
     </EmbeddedResource>
