--- a/stock-tracking-automation.csproj
+++ b/stock-tracking-automation.csproj
@@ -70,11 +70,11 @@
     <Compile Include="frmMüsteriEkle.Designer.cs">
       <DependentUpon>frmMüsteriEkle.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmSales.cs">
+    <Compile Include="frmSatis.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmSales.Designer.cs">
-      <DependentUpon>frmSales.cs</DependentUpon>
+    <Compile Include="frmSatis.Designer.cs">
+      <DependentUpon>frmSatis.cs</DependentUpon>
     </Compile>
     <Compile Include="frmUrunEkleme.cs">
       <SubType>Form</SubType>
@@ -102,8 +102,8 @@
     <EmbeddedResource Include="frmMüsteriEkle.resx">
       <DependentUpon>frmMüsteriEkle.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmSales.resx">
-      <DependentUpon>frmSales.cs</DependentUpon>
+    <EmbeddedResource Include="frmSatis.resx">
+      <DependentUpon>frmSatis.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmUrunEkleme.resx">
       <DependentUpon>frmUrunEkleme.cs</DependentUpon>
